--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+/target
+/lib
+/classes
+/checkouts
 pom.xml
-*jar
-/lib/
-/classes/
-/targets/
+*.jar
+*.class
 .lein-deps-sum
+.lein-failures
+.lein-plugins
+*~
+*#
+.#*
